--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -23,7 +23,7 @@ bazel_dep(name = "rules_pkg", version = "1.0.1")
 # Python version
 #
 ###############################################################################
-bazel_dep(name = "rules_python", version = "1.0.0")
+bazel_dep(name = "rules_python", version = "1.4.1")
 
 PYTHON_VERSION = "3.12"
 
@@ -36,7 +36,7 @@ python.toolchain(
 use_repo(python)
 
 # Additional Python rules provided by aspect, e.g. an improved version of
-bazel_dep(name = "aspect_rules_py", version = "1.0.0")
+bazel_dep(name = "aspect_rules_py", version = "1.4.0")
 bazel_dep(name = "buildifier_prebuilt", version = "7.3.1")
 
 ###############################################################################
@@ -44,12 +44,13 @@ bazel_dep(name = "buildifier_prebuilt", version = "7.3.1")
 # Generic linting and formatting rules
 #
 ###############################################################################
-bazel_dep(name = "aspect_rules_lint", version = "1.3.1")
+bazel_dep(name = "aspect_rules_lint", version = "1.4.2")
 
 # Provides, pytest & venv
-bazel_dep(name = "score_python_basics", version = "0.3.0")
+bazel_dep(name = "score_python_basics", version = "0.3.1")
 
 # Checker rule for CopyRight checks/fixes
 bazel_dep(name = "score_cr_checker", version = "0.2.2")
-bazel_dep(name = "score_docs_as_code", version = "0.2.2")
 bazel_dep(name = "score_format_checker", version = "0.1.1")
+bazel_dep(name = "score_platform", version = "0.1.1")
+bazel_dep(name = "score_docs_as_code", version = "0.2.6")
