--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -11,6 +11,11 @@
 # SPDX-License-Identifier: Apache-2.0
 # *******************************************************************************
 
+module(
+    name = "score_process",
+    version = "0.1.0",
+    compatibility_level = 0,
+)
 ###############################################################################
 #
 # Packaging dependencies
@@ -53,4 +58,4 @@ bazel_dep(name = "score_python_basics", version = "0.3.1")
 bazel_dep(name = "score_cr_checker", version = "0.2.2")
 bazel_dep(name = "score_format_checker", version = "0.1.1")
 bazel_dep(name = "score_platform", version = "0.1.1")
-bazel_dep(name = "score_docs_as_code", version = "0.2.6")
+bazel_dep(name = "score_docs_as_code", version = "0.3.0")
