--- a/process/BUILD
+++ b/process/BUILD
@@ -21,32 +21,14 @@ load("@score_docs_as_code//:docs.bzl", "docs")
 # - `process:docs` for building documentation at build-time
 
 docs(
-    conf_dir = "process",  # Where 'conf.py' is
-    docs_targets = [
+    conf_dir="process",  # Where 'conf.py' is
+    docs_targets=[
         {
             "suffix": "latest",  # latest main branch documentation build
-            "external_needs_info": [
-                {
-                    "base_url": "https://eclipse-score.github.io/score/main/",
-                    "json_url": "https://eclipse-score.github.io/score/main/needs.json",
-                    "id_prefix": "score_",
-                },
-            ],
-        },
-        {
-            "suffix": "release",  # The version imported from MODULE.bazel
-            "target": ["@score_platform//docs:docs_needs"],
-            "external_needs_info": [
-                {
-                    "base_url": "https://eclipse-score.github.io/score/main/",
-                    "json_path": "/score_platform~/docs/docs_needs/_build/needs/needs.json",
-                    "id_prefix": "score_",
-                },
-            ],
         },
     ],
-    source_dir = "process",  # Where the RST files are located
-    source_files_to_scan_for_needs_links = [
+    source_dir="process",  # Where the RST files are located
+    source_files_to_scan_for_needs_links=[
         # Note: you can add filegroups, globs, or entire targets here.
     ],
 )
