--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -38,5 +38,5 @@ jobs:
       id-token: write
 
     with:
-      bazel-target: "//process:github_pages__latest"
+      bazel-target: "//process:incremental_latest -- --github_user=${{ github.repository_owner }} --github_repo=${{ github.event.repository.name }}"
       retention-days: 3
