prepare new release 1.1.0
update score_cr_checker => 0.3.1
score_python_basics => 0.3.4
doc-as-cod -> 1.1.0

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -13,7 +13,7 @@
 
 module(
     name = "score_process",
-    version = "1.0.5",
+    version = "1.1.0",
     compatibility_level = 1,
 )
 
@@ -58,4 +58,4 @@ bazel_dep(name = "score_python_basics", version = "0.3.4")
 # Checker rule for CopyRight checks/fixes
 bazel_dep(name = "score_cr_checker", version = "0.3.1")
 bazel_dep(name = "score_format_checker", version = "0.1.1")
-bazel_dep(name = "score_docs_as_code", version = "1.0.0-RC1")
+bazel_dep(name = "score_docs_as_code", version = "1.0.0")
