--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -13,7 +13,7 @@
 
 module(
     name = "score_process",
-    version = "1.0.4",
+    version = "1.0.5",
     compatibility_level = 1,
 )
 
@@ -53,9 +53,9 @@ bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")
 bazel_dep(name = "aspect_rules_lint", version = "1.4.4")
 
 # Provides, pytest & venv
-bazel_dep(name = "score_python_basics", version = "0.3.2")
+bazel_dep(name = "score_python_basics", version = "0.3.4")
 
 # Checker rule for CopyRight checks/fixes
 bazel_dep(name = "score_cr_checker", version = "0.2.2")
 bazel_dep(name = "score_format_checker", version = "0.1.1")
-bazel_dep(name = "score_docs_as_code", version = "0.4.4")
+bazel_dep(name = "score_docs_as_code", version = "1.0.0RC1")
