--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -58,4 +58,4 @@ bazel_dep(name = "score_python_basics", version = "0.3.4")
 # Checker rule for CopyRight checks/fixes
 bazel_dep(name = "score_cr_checker", version = "0.2.2")
 bazel_dep(name = "score_format_checker", version = "0.1.1")
-bazel_dep(name = "score_docs_as_code", version = "1.0.0RC1")
+bazel_dep(name = "score_docs_as_code", version = "1.0.0-RC1")
