--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -42,7 +42,7 @@ python.toolchain(
 use_repo(python)
 
 # Additional Python rules provided by aspect, e.g. an improved version of
-bazel_dep(name = "aspect_rules_py", version = "1.4.0")
+bazel_dep(name = "aspect_rules_py", version = "1.6.3")
 bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")
 
 ###############################################################################
@@ -50,12 +50,6 @@ bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")
 # Generic linting and formatting rules
 #
 ###############################################################################
-bazel_dep(name = "aspect_rules_lint", version = "1.4.4")
-
-# Provides, pytest & venv
-bazel_dep(name = "score_python_basics", version = "0.3.4")
-
-# Checker rule for CopyRight checks/fixes
-bazel_dep(name = "score_cr_checker", version = "0.3.1")
-bazel_dep(name = "score_format_checker", version = "0.1.1")
-bazel_dep(name = "score_docs_as_code", version = "1.0.2")
+bazel_dep(name = "aspect_rules_lint", version = "1.5.3")
+bazel_dep(name = "score_tooling", version = "1.0.0")
+bazel_dep(name = "score_docs_as_code", version = "1.1.0")
