--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ user.bazelrc
 
 # docs:incremental and docs:ide_support build artifacts
 /_build*
+process/ubproject.toml
 
 # Vale - editorial style guide
 .vale.ini
