update bugfix issue template
align with changes in score per
(eclipse-score/score#2423)

--- a/.github/ISSUE_TEMPLATE/1-bugfix.yml
+++ b/.github/ISSUE_TEMPLATE/1-bugfix.yml
@@ -15,6 +15,7 @@ name: Problem Report
 description: Issue to track a bug
 title: "Bug: Your bugfix title"
 labels: ["codeowner_review"]
+type: 'Bug'
 body:
   - type: markdown
     attributes:
