--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -6,4 +6,4 @@
 # default owners
 # @eclipse-score/community-process
 # interim solution:
-* @pahmann @PhilipPartsch @masc2023 @aschemmel-tech @PandaeDo
+* @pahmann @masc2023 @aschemmel-tech @PandaeDo
