nulledit for triggerng workflow again

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -51,8 +51,12 @@ bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")
 bazel_dep(name = "aspect_rules_lint", version = "1.5.3")
 bazel_dep(name = "score_tooling", version = "1.0.2")
 bazel_dep(name = "score_docs_as_code", version = "2.3.3")
-git_override(
+#git_override(
+#    module_name = "score_docs_as_code",
+#    commit = "56ebbde1e4f0d73ec269099babd719a046736ec9",
+#    remote = "https://github.com/eclipse-score/docs-as-code.git",
+#)
+local_path_override(
     module_name = "score_docs_as_code",
-    commit = "56ebbde1e4f0d73ec269099babd719a046736ec9",
-    remote = "https://github.com/eclipse-score/docs-as-code.git",
+    path = "../score_docs-as-code",
 )
