--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -29,7 +29,7 @@ bazel_dep(name = "rules_pkg", version = "1.1.0")
 # Python version
 #
 ###############################################################################
-bazel_dep(name = "rules_python", version = "1.4.1")
+bazel_dep(name = "rules_python", version = "1.8.3")
 
 PYTHON_VERSION = "3.12"
 
@@ -49,5 +49,18 @@ bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")
 #
 ###############################################################################
 bazel_dep(name = "aspect_rules_lint", version = "1.5.3")
-bazel_dep(name = "score_tooling", version = "1.0.2")
+bazel_dep(name = "score_tooling", version = "1.1.0")
+# local_path_override(
+#     module_name="score_tooling",
+#     path="../tooling"
+# )
 bazel_dep(name = "score_docs_as_code", version = "2.3.3")
+git_override(
+    module_name="score_docs_as_code",
+    commit = "bf5e9ddab80dee6b1398cc87478d5dbc6b3b384f",
+    remote="https://github.com/qorix-group/docs-as-code.git",
+)
+# local_path_override(
+#     module_name="score_docs_as_code",
+#     path="../docs-as-code"
+# )
