--- a/.bazelrc
+++ b/.bazelrc
@@ -5,7 +5,7 @@ build --tool_java_runtime_version=remotejdk_17
 
 test --test_output=errors
 
-# stop legacy behavior of creating __init__.py files
+# stop legacy behaviour of creating __init__.py files
 build --incompatible_default_to_explicit_init_py
 
 common --registry=https://raw.githubusercontent.com/eclipse-score/bazel_registry/main/
